# file_renamer

./: Cargo.toml
src/: file_operations.rs  lib.rs  main.rs
src/core/: error.rs  mod.rs  operations.rs  options.rs
src/core/cli/: cli.rs
src/core/rename/: mod.rs  strategies.rs  validator.rs
src/tests/: cli_tests.rs  helpers.rs  list_paths_tests.rs  mod.rs  rename_tests.rs
